<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, This is the application reflections!</string>
    <string name="app_name">Reflections</string>
<string name="next">Next</string>
<string name="label_edittext">Message</string>
<string name="label_editdate">Date</string>
<string name="previous">Previous</string>
<string name="menu_insert_about">About</string>
<string name="random">Random</string>
<string name="about_us_text">Reflections v1.3 \n\nWritten with quotes from a range of sources. \n\nIn dedication to Zane, just in case I do not get the chance to explain this in person when you are older... \n\nPlease note that facebook sharing does not work due to issue with Android for Facebook</string>
<string name="back">Back</string>
<string name="menu_insert_change_font_size">Change Font Size</string>
<string name="small">Small</string>
<string name="medium">Medium</string>
<string name="large">Large</string>
<string name="send_email">Email</string>
<string name="menu_send_sms">Send SMS</string>
<string name="menu_copy_to_clipboard">Copy to Clipboard</string>
<string name="menu_send_email">Send Email</string>
<string name="share">Share</string>
<string name="quote_copied_to_clipboard">Quote has been copied to the clipboard</string>
<string name="quote_from_reflections">Quote from Reflections</string>
<string name="share_this_quote">Share this Quote</string>
<string name="pick_a_font_size">Pick a font size</string>
</resources>
