<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content">
  
  
  
	<TextView 
        android:id="@+id/about_us_text"
        style="@style/mediumText"
        android:layout_width="wrap_content" 
        android:layout_marginTop="20px"
        android:layout_marginBottom="20px"
        android:layout_height="wrap_content" 
        android:text="@string/about_us_text"/>	

	<LinearLayout
		  xmlns:android="http://schemas.android.com/apk/res/android"
		  android:orientation="horizontal"
		  android:layout_width="wrap_content"
		  android:layout_height="wrap_content">

		<Button android:id="@+id/random_button_id"
		     android:layout_height="wrap_content"
		     android:layout_width="wrap_content"
		     android:text="@string/random"/> 
		     
		<Button android:id="@+id/back_button_id"
		     android:layout_height="wrap_content"
		     android:layout_width="wrap_content"
		     android:text="@string/back"/> 
	</LinearLayout>
  	
</LinearLayout>
