<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	   		android:id="@+id/ScrollView01" 
	   		android:layout_width="wrap_content" 
			android:layout_height="730px">
	
	<LinearLayout
	  xmlns:android="http://schemas.android.com/apk/res/android"
	  android:orientation="vertical"
	  android:layout_width="wrap_content"
	  android:layout_height="wrap_content">
	  
	  <LinearLayout
		  xmlns:android="http://schemas.android.com/apk/res/android"
		  android:orientation="horizontal"
		  android:layout_width="wrap_content"
		  android:layout_marginBottom="20px"
		  android:layout_height="wrap_content">
	
		    
		    <Button android:id="@+id/prev_button_id"
		     android:layout_height="wrap_content"
		     android:layout_width="wrap_content"
		     android:text="@string/previous"/>  
		     
		    <Button android:id="@+id/random_button_id"
		     android:layout_height="wrap_content"
		     android:layout_width="wrap_content"
		     android:text="@string/random"/> 
		    
		    <Button android:id="@+id/share_button_id"
		     android:layout_height="wrap_content"
		     android:layout_width="wrap_content"
		     android:text="@string/share"/> 
		     
		    <Button android:id="@+id/next_button_id"
		     android:layout_height="wrap_content"
		     android:layout_width="wrap_content"
		     android:text="@string/next"/>  
	  	</LinearLayout>
	  		
			<TextView 
				style="@style/smallText"
		        android:id="@+id/label_edittext"
		        android:text="@string/label_edittext"/>	
		
	
		<LinearLayout
		  xmlns:android="http://schemas.android.com/apk/res/android"
		  android:orientation="horizontal"
		  android:layout_width="wrap_content"
		  android:layout_marginTop="20px"
		  android:layout_height="wrap_content">
	
		    
		    <Button android:id="@+id/prev_button_id_bottom"
		     android:layout_height="wrap_content"
		     android:layout_width="wrap_content"
		     android:text="@string/previous"/>  
		     
		    <Button android:id="@+id/random_button_id_bottom"
		     android:layout_height="wrap_content"
		     android:layout_width="wrap_content"
		     android:text="@string/random"/> 
		    <Button android:id="@+id/share_button_id_bottom"
		     android:layout_height="wrap_content"
		     android:layout_width="wrap_content"
		     android:text="@string/share"/> 
		    
		    <Button android:id="@+id/next_button_id_bottom"
		     android:layout_height="wrap_content"
		     android:layout_width="wrap_content"
		     android:text="@string/next"/>  
	  	</LinearLayout>
	  	
	  	
	</LinearLayout>
	
</ScrollView>